# ohmystock

./: Cargo.toml  README.md  README_USAGE.md  typos.toml  update_stock_list.sh  상장법인목록.xls
data/: stock_list.html
src/: main.rs  stock_list.rs
