[package]
name = "ohmystock"
version = "0.1.8"
authors = ["ysoftman <ysoftman@gmail.com>"]
edition = "2018"
description = "show stock price"
license = "MIT"
readme = "README_USAGE.md"
repository = "https://github.com/ysoftman/ohmystock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
reqwest = { version = "0.13", features = ["blocking", "json"] }
select = "0.6"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
