[package]
name = "ohmystock"
version = "0.1.14"
authors = ["ysoftman <ysoftman@gmail.com>"]
edition = "2021"
rust-version = "1.85"
description = "show stock price"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ysoftman/ohmystock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3"
reqwest = { version = "0.13", features = ["blocking", "json"] }
scraper = "0.26"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
fuzzy-matcher = "0.3"
